--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,4 +1,20 @@
 {{ define "content" }}
+<div class="tags">
+  <ul class="tags-list">
+    {{- $type := .Type }}
+    {{- range $name, $taxonomy := .Site.Taxonomies.tags }}
+      {{- $cnt := .Count }}
+      {{- with $.Site.GetPage (printf "/tags/%s" $name) }}
+        <li>
+          <a href="{{ .RelPermalink }}" title="All pages with tag <i>{{ $name }}</i>">{{ $name }}<small>({{ $cnt }})</small></a>
+        </li>
+      {{- end }}
+    {{- end }}
+  </ul>
+</div>
+
+
+
 <div class="blog-wrapper">
   <div>
     <div class="card-list">
