--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,40 +1,41 @@
 {{ define "content" }}
 <div class="tags">
   <ul class="tags-list">
-    {{- $type := .Type }}
-    {{- range $name, $taxonomy := .Site.Taxonomies.tags }}
-      {{- $cnt := .Count }}
-      {{- with $.Site.GetPage (printf "/tags/%s" $name) }}
-        <li>
-          <a href="{{ .RelPermalink }}" title="All pages with tag <i>{{ $name }}</i>">{{ $name }}<small>({{ $cnt }})</small></a>
-        </li>
-      {{- end }}
-    {{- end }}
+    {{- $type := .Type }} {{- range $name, $taxonomy := .Site.Taxonomies.tags }}
+    {{- $cnt := .Count }} {{- with $.Site.GetPage (printf "/tags/%s" $name) }}
+    <li>
+      <a
+        href="{{ .RelPermalink }}"
+        title="All pages with tag <i>{{ $name }}</i>"
+        >{{ $name }}<small>({{ $cnt }})</small></a
+      >
+    </li>
+    {{- end }} {{- end }}
   </ul>
 </div>
-
-
 
 <div class="blog-wrapper">
   <div>
     <div class="card-list">
       {{ range .Paginator.Pages }}
-        <article>
-          <div class="card">
-              <h3><a href="{{ .RelPermalink }}">{{ .Params.title }}</a></h3>
-              {{ partial "blog/meta.html" . }}
-              {{ .Summary }}
-          </div>
-        </article>
+      <article>
+        <div class="card">
+          <h3><a href="{{ .RelPermalink }}">{{ .Params.title }}</a></h3>
+          {{ partial "blog/meta.html" . }} {{ .Summary }}
+        </div>
+      </article>
       {{ end -}}
     </div>
     {{ if gt .Paginator.TotalPages 1 }}
     <div class="paginator">
       {{ if .Paginator.HasPrev }}
-      <a class="prev" href="{{ .Paginator.Prev.URL }}">&larr;&nbsp;&nbsp;Pre Page</a>
-      {{ end }}
-      {{ if .Paginator.HasNext }}
-      <a class="next" href="{{ .Paginator.Next.URL }}">Next Page&nbsp;&nbsp;&rarr;</a>
+      <a class="prev" href="{{ .Paginator.Prev.URL }}"
+        >&larr;&nbsp;&nbsp;Pre Page</a
+      >
+      {{ end }} {{ if .Paginator.HasNext }}
+      <a class="next" href="{{ .Paginator.Next.URL }}"
+        >Next Page&nbsp;&nbsp;&rarr;</a
+      >
       {{ end }}
     </div>
     {{ end }}
