--- a/layouts/shortcodes/toggle.html
+++ b/layouts/shortcodes/toggle.html
@@ -1,6 +1,8 @@
 <p>
-<details class="toggle">
-  <summary markdown="span">{{ .Get "summary" | default "Toggle" | markdownify }}</summary>
-  {{ .Inner | markdownify }}
-</details>
+  <details class="toggle">
+    <summary markdown="span">
+      {{ .Get "summary" | default "Toggle" | markdownify }}
+    </summary>
+    {{ .Inner | markdownify }}
+  </details>
 </p>
