--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,18 +1,14 @@
 {{ define "content" }}
 
 <div class="tags">
-
   <ul class="tags-list">
-    {{- $type := .Type }}
-    {{- range $key, $value := .Data.Terms.Alphabetical }}
-    {{- $name := .Name }}
-    {{- $count := .Count }}
-    {{- with site.GetPage (printf "/%s/%s" $type $name) }}
+    {{- $type := .Type }} {{- range $key, $value := .Data.Terms.Alphabetical }}
+    {{- $name := .Name }} {{- $count := .Count }} {{- with site.GetPage (printf
+    "/%s/%s" $type $name) }}
     <li>
       <a href="{{ .Permalink }}">{{ .Name }}<small>({{ $count }})</small></a>
     </li>
-    {{- end }}
-    {{- end }}
+    {{- end }} {{- end }}
   </ul>
 </div>
 
