--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,3 +1,1 @@
-{{ define "content" }}
-  {{ partial "home/profile.html" . }}
-{{ end }}
+{{ define "content" }} {{ partial "home/profile.html" . }} {{ end }}
