--- a/layouts/partials/common/extensions.html
+++ b/layouts/partials/common/extensions.html
@@ -1,3 +1,3 @@
-{{ template "_internal/opengraph.html" . }}
-{{ template "_internal/twitter_cards.html" . }}
-{{- template "partials/common/schema.html" . }}
+{{ template "_internal/opengraph.html" . }} {{ template
+"_internal/twitter_cards.html" . }} {{- template "partials/common/schema.html" .
+}}
