--- a/layouts/partials/home/profile.html
+++ b/layouts/partials/home/profile.html
@@ -1,21 +1,15 @@
 <div class="home">
-    <div class="info">
-        <div class="intro">
-            <h1>{{ .Site.Params.author }}</h1>
-            <small>{{ .Site.Params.authorDescription }}</small>
-            <p>{{ .Site.Params.info }}</p>
-        </div>
-
-        {{ if .Site.Params.avatarURL }}
-        {{ with .Site.Params.avatarURL }}
-        <div class="avatar"><img src="{{ . | relURL }}" alt="avatar"></div>
-        {{ end }}
-        {{ end }}
+  <div class="info">
+    <div class="intro">
+      <h1>{{ .Site.Params.author }}</h1>
+      <small>{{ .Site.Params.authorDescription }}</small>
+      <p>{{ .Site.Params.info }}</p>
     </div>
 
-    <div class="featured">
-        {{ partial "home/featured.html" . }}
-    </div>
+    {{ if .Site.Params.avatarURL }} {{ with .Site.Params.avatarURL }}
+    <div class="avatar"><img src="{{ . | relURL }}" alt="avatar" /></div>
+    {{ end }} {{ end }}
+  </div>
 
+  <div class="featured">{{ partial "home/featured.html" . }}</div>
 </div>
-
